Addede bookings and ticket form

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span></span>
           </li>
           <li>
-            <a href=""
+            <a href="bookings.html"
               ><i class="bi bi-calendar2-check display-icon me-2"></i>
               Bookings</a
             >
@@ -134,40 +134,40 @@
               <div
                 class="row align-items-center justify-content-between mt-3 mb-1"
               >
-                <div class="col-sm-5 col-8">
+                <div class="col-sm-8 col-8">
                   <i
                     class="bi bi-box me-2"
                     style="font-size: 1.1em; cursor: pointer"
                   ></i>
                   Buses
                 </div>
-                <div class="col-sm-5 col-2 text-end">12</div>
+                <div class="col-sm-2 col-2 text-end">12</div>
               </div>
               <div class="divider"></div>
               <div
                 class="row align-items-center justify-content-between mt-3 mb-1"
               >
-                <div class="col-sm-5 col-8">
+                <div class="col-sm-8 col-8">
                   <i
                     class="bi bi-person-plus me-2"
                     style="font-size: 1.1em; cursor: pointer"
                   ></i>
                   Workers
                 </div>
-                <div class="col-sm-5 col-2 text-end">20</div>
+                <div class="col-sm-3 col-2 text-end">20</div>
               </div>
               <div class="divider"></div>
               <div
                 class="row align-items-center justify-content-between mt-3 mb-1"
               >
-                <div class="col-sm-5 col-8">
+                <div class="col-sm-8 col-8">
                   <i
                     class="bi bi-person-x me-2"
                     style="font-size: 1.1em; cursor: pointer"
                   ></i>
                   Divers
                 </div>
-                <div class="col-sm-5 col-2 text-end">15</div>
+                <div class="col-sm-3 col-2 text-end">15</div>
               </div>
             </div>
           </div>
@@ -222,15 +222,42 @@
           </div>
         </div>
 
-        <div class="row align-items-center justify-content-between mt-4">
+        <div class="row align-items-center justify-content-between mt-3">
           <div class="col-sm-4 col-12">
-            <div class="card p-4 my-3"></div>
+            <div class="card p-3 my-3">
+              <div class="row align-items-center justify-content-between">
+                <div class="col-sm-3 col-3 text-center">
+                  <i class="bi bi-graph-down-arrow icon ms-2"></i>
+                </div>
+                <div class="col-sm-9 col-9 text-sm-center">
+                  Expenses: <span class="fw-bold ms-1">$2,774</span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-sm-4 col-12">
-            <div class="card p-4 my-3"></div>
+            <div class="card p-3 my-3">
+              <div class="row align-items-center justify-content-between">
+                <div class="col-sm-3 col-3 text-center">
+                  <i class="bi bi-activity icon-income ms-2"></i>
+                </div>
+                <div class="col-sm-9 col-9 text-sm-center">
+                  Income: <span class="fw-bold ms-1">$59,350</span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-sm-4 col-12">
-            <div class="card p-4 my-3"></div>
+            <div class="card p-3 my-3">
+              <div class="row align-items-center justify-content-between">
+                <div class="col-sm-3 col-3 text-center">
+                  <i class="bi bi-arrow-repeat icon-users ms-2"></i>
+                </div>
+                <div class="col-sm-9 col-9 text-sm-center">
+                  Active Trips: <span class="fw-bold ms-1">350</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
