Made content width layout

--- a/adapted-table.html
+++ b/adapted-table.html
@@ -60,7 +60,7 @@
     </div>
     <!-- end of side navbar -->
 
-    <div class="dashboard-content px-2 px-sm-4">
+    <div class="content-width  px-2 px-sm-4">
       <!-- Navigation menu -->
       <div class="navbar_menu">
         <i class="bi bi-columns-gap menu icon_menu"></i>
