--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span></span>
           </li>
           <li>
-            <a href=""
+            <a href="adapted-table.html"
               ><i class="bi bi-bootstrap-reboot display-icon me-2"></i>
               Resources</a
             >
