--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               >
                 <div class="col-sm-8 col-8">
                   <i
-                    class="bi bi-box me-2"
+                    class="bi bi-dpad me-2"
                     style="font-size: 1.1em; cursor: pointer"
                   ></i>
                   Buses
@@ -149,7 +149,7 @@
               >
                 <div class="col-sm-8 col-8">
                   <i
-                    class="bi bi-person-plus me-2"
+                    class="bi bi-layout-text-window-reverse me-2"
                     style="font-size: 1.1em; cursor: pointer"
                   ></i>
                   Workers
